# Bachelor-Poc

./: LICENSE  Poc.cabal  README.md
app/: Main.hs
report/: report.txt
report/report_backup/: report.txt
report/report_backup/tex/: report.tex
report/tex/: report.aux  report.dvi  report.tex
src/: Poc.hs  PocParser.hs  PocStrategy.hs
test/: Spec.hs  StrategyTest.hs
test/basic_programs/: bit_bigger_example  driving_example  index  loop_chain  loop_tree  one_loop  two_access
