name:                Poc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Poc#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolai Nebel Joergensen
maintainer:          nicolainebel@gmail.com
copyright:           2016 Nicolai Nebel Joergensen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Poc
                     , PocParser
                     , PocStrategy
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7.1,
                       mtl >= 2.2.1,
                       parsec >= 3.1
  default-language:    Haskell2010

executable Poc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Poc
  default-language:    Haskell2010

test-suite Poc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Poc
                     , containers >= 0.5.7.1
                     , directory >= 1.2.6.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NicolaiNebel/BachelorPoc
